CANDLEPIN-513: Docker to Podman cleanup