@@ -2,14 +2,15 @@
 
 set -e
 
+source /root/containerlib.sh
+
 setup_supervisor() {
-    pip install meld3==1.0.0
-    pip install supervisor
+    yum install -y supervisor
     mkdir -p /var/log/supervisor
     mkdir -p /etc/supervisor/conf.d
     cat > /etc/supervisord.conf <<SUPERVISOR
 [supervisord]
-nodaemon=true
+nodaemon=false
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
@@ -25,6 +26,10 @@ file=/var/run/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 SUPERVISOR
+    cat > /etc/supervisor/conf.d/rsyslog.conf <<RSYSLOG_SUPERVISOR
+[program:rsyslog]
+command=/sbin/rsyslogd -n -c 5
+RSYSLOG_SUPERVISOR
 }
 
 setup_tomcat() {
@@ -32,11 +37,31 @@ setup_tomcat() {
 [program:tomcat]
 user=tomcat
 environment=CATALINA_PID="/tmp/tomcat.pid",JAVA_HOME="/usr/lib/jvm/jre"
-command=java -classpath /usr/share/tomcat/bin/bootstrap.jar:/usr/share/tomcat/bin/tomcat-juli.jar:/usr/share/java/commons-daemon.jar -Dcatalina.base=/usr/share/tomcat -Dcatalina.home=/usr/shareomcat -Djava.endorsed.dirs= -Djava.io.tmpdir=/var/cache/tomcat/temp -Djava.util.logging.config.file=/usr/share/tomcat/conf/logging.properties -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager org.apache.catalina.startup.Bootstrap start
+command=/usr/libexec/tomcat/server start
 stopsignal=TERM
 redirect_stderr=true
 TOMCAT_SUPERVISOR
 }
+
+setup_ssh() {
+    yum install -y openssh-server
+    echo 'root:redhat' |chpasswd
+    RSA_KEY=/etc/ssh/ssh_host_rsa_key
+    DSA_KEY=/etc/ssh/ssh_host_dsa_key
+
+    ssh-keygen -q -t dsa -f $DSA_KEY -C '' -N '' >&/dev/null
+    chmod 600 $DSA_KEY
+    chmod 644 $DSA_KEY.pub
+
+    ssh-keygen -q -t rsa -f $RSA_KEY -C '' -N '' >&/dev/null
+    chmod 600 $RSA_KEY
+    chmod 644 $RSA_KEY.pub
+    cat > /etc/supervisor/conf.d/sshd.conf <<SSH_SUPERVISOR
+[program:sshd]
+command=/usr/sbin/sshd -D
+SSH_SUPERVISOR
+}
+
 
 setup_candlepinrc() {
     cat > /root/.candlepinrc <<CANDLEPINRC
@@ -44,6 +69,9 @@ SUPERVISOR=1
 CANDLEPINRC
 }
 
+set -v
 setup_supervisor
+setup_ssh
 setup_tomcat
 setup_candlepinrc
+cleanup_env
